fix alignment issue

--- a/scripts/content/main.css
+++ b/scripts/content/main.css
@@ -1,4 +1,16 @@
+.container {
+  margin: 0;
+  padding: 0 5%;
+  max-width: 100%;
+}
+
+.content-text {
+  margin: 0;
+  padding: 0;
+}
+
 .introduction {
+  margin: 0;
   text-align: justify;
   font-family: Bellota;
   font-size: 20px;
@@ -13,8 +25,6 @@
 
 @media only screen and (max-width: 600px) {
   .introduction {
-    padding: 0 5%;
-    margin: 0;
     text-align: justify;
     font-family: Bellota;
     font-size: 15px;
@@ -36,5 +46,7 @@
     margin:0 !important;
     border: 0;
     padding: 0;
+    margin: 0;
+    padding: 0 5%;
   }
 }
