--- a/scripts/recommendations/recommendations.css
+++ b/scripts/recommendations/recommendations.css
@@ -13,7 +13,7 @@
 }
 
 .card-title {
-  padding-left: 16%;
+  padding: 0 5%;
   margin-bottom: 70px;
   font-family: 'Bellota';
   font-size: 60px;
